openshift/deployment.yaml
# Update <REGISTRY> <NAMESPACE> values before use
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-names
  labels:
    app: get-names
spec:
  replicas: 3
  selector:
    matchLabels:
      app: get-names
  template:
    metadata:
      labels:
        app: get-names
    spec:
      imagePullSecrets:
      - name: ibmcloud-registry-pull
      containers:
      - name: get-names
        image: ${PIPELINE_IMAGE_URL}
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
