openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: get-names
  name: get-names
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: get-names
  type: ClusterIP
