openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: get-names-route
spec:
  host: mysite.drsdemo.com  
  to:
    kind: Service
    name: get-names
